--- a/asset/style.css
+++ b/asset/style.css
@@ -10,6 +10,11 @@ ul {
 body {
   font-family: Arial, sans-serif;
   background-color: rgb(82, 82, 235);
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .contenaire {
@@ -17,7 +22,7 @@ body {
   margin: 0 auto;
   padding: 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
